--- a/app/src/main/res/layout/activity_weather.xml
+++ b/app/src/main/res/layout/activity_weather.xml
@@ -5,30 +5,56 @@
     android:layout_height="match_parent"
     android:background="@color/colorPrimary">
 
-    <ScrollView
+    <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scrollbars="none"
-        android:overScrollMode="never"
-        android:id="@+id/weather_layout">
+        android:id="@+id/bing_pic_img"
+        android:scaleType="centerCrop"/>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+   <android.support.v4.widget.DrawerLayout
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+       android:id="@+id/drawer_layout">
 
-            <include layout="@layout/title"/>
+       <android.support.v4.widget.SwipeRefreshLayout
+           android:id="@+id/swipe_refrsh"
+           android:layout_height="match_parent"
+           android:layout_width="match_parent">
+           <ScrollView
+               android:layout_width="match_parent"
+               android:layout_height="match_parent"
+               android:scrollbars="none"
+               android:overScrollMode="never"
+               android:id="@+id/weather_layout">
 
-            <include layout="@layout/now"/>
+               <LinearLayout
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:orientation="vertical"
+                   android:fitsSystemWindows="true">
 
-            <include layout="@layout/forecast"/>
+                   <include layout="@layout/title"/>
 
-            <include layout="@layout/api"/>
+                   <include layout="@layout/now"/>
 
-            <include layout="@layout/suggestion"/>
+                   <include layout="@layout/forecast"/>
 
-        </LinearLayout>
+                   <include layout="@layout/api"/>
 
-    </ScrollView>
+                   <include layout="@layout/suggestion"/>
 
+               </LinearLayout>
+
+           </ScrollView>
+
+       </android.support.v4.widget.SwipeRefreshLayout>
+
+       <fragment
+           android:layout_width="match_parent"
+           android:layout_height="match_parent"
+           android:layout_gravity="start"
+           android:id="@+id/choose_area_fragment"
+           android:name="com.goodweather.android.ChooseAreaFragment"/>
+
+   </android.support.v4.widget.DrawerLayout>
 </FrameLayout>
